--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
-Hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Matthew Bailey</title>
+    <meta name="description" content="Matthew Bailey, Software Engineering Lead at Specsavers, with expertise in web development and team leadership.">
+    <!-- Web Monetization -->
+    <meta name="monetization" content="$ilp.uphold.com/mBPUrBsKm4xN">
+
+    <!-- Twitter data -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Matthew Bailey">
+    <meta name="twitter:description" content="Matthew Bailey, Software Engineering Lead at Specsavers.">
+    <meta name="twitter:creator" content="@matthewbailey">
+    <meta name="twitter:image" content="https://example.com/img/headshot.png">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Matthew Bailey">
+    <meta property="og:url" content="https://example.com/">
+    <meta property="og:image" content="https://example.com/img/headshot.png">
+    <meta property="og:description" content="Matthew Bailey, Software Engineering Lead at Specsavers, with expertise in web development and team leadership.">
+    <meta property="og:site_name" content="Matthew Bailey">
+
+    <!-- Favicon/theme -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/img/manifest.json">
+    <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#24d05a">
+    <link rel="shortcut icon" href="/img/favicon.ico">
+    <meta name="msapplication-config" content="/img/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="header-section">
+            <div class="header-frame">
+                <h1>Matthew Bailey</h1>
+                <h2>Software Engineering Lead at Specsavers</h2>
+            </div>
+            <div class="img-frame">
+                <img id="propic" src="https://example.com/img/face1.jpg" alt="">
+            </div>
+        </div>
+        <div class="links">
+            <a href="https://github.com/matthewbailey">github</a>
+            <a href="https://twitter.com/matthewbailey">twitter</a>
+            <a href="https://www.linkedin.com/in/matthewbailey/">linkedin</a>
+        </div>
+        <div class="bio-switcher">
+            <div class="toggler">
+                <button id="short" class="show">Short</button>
+                <button id="long">Long</button>
+            </div>
+            <div class="bio short show">
+                Hi there! My name is Matthew. I'm the Software Engineering Lead at Specsavers, leading a team of talented developers in creating innovative web solutions. I have a passion for clean code, robust architecture, and delivering exceptional user experiences.
+            </div>
+            <div class="bio long">
+                Hello, I'm Matthew Bailey, a seasoned software engineer with a focus on web development. I currently serve as the Software Engineering Lead at Specsavers, where I lead a team of developers to build cutting-edge web applications. With over a decade of experience in the industry, I specialize in frontend and backend development, with proficiency in technologies like JavaScript, Node.js, React, and MongoDB.
+                In addition to my technical skills, I'm also adept at team leadership, project management, and fostering a collaborative work environment. I'm passionate about staying updated with the latest trends and technologies in software development and continuously strive for excellence in my work.
+            </div>
+        </div>
+    </div>
+
+    <script src="./script.js"></script>
+</body>
+</html>
