--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             </div>
         </div>
         <div class="links">
-            <a href="https://github.com/matthewbailey">github</a>
-            <a href="https://twitter.com/matthewbailey">twitter</a>
-            <a href="https://www.linkedin.com/in/matthewbailey/">linkedin</a>
+            <a href="https://www.linkedin.com/in/matthewpeterbailey/">linkedin</a>
         </div>
         <div class="bio-switcher">
             <div class="toggler">
